openshift-setup/manifests/graf_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: triton-monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
