openshift-setup/manifests/graf_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: triton-monitoring
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: 3000
