openshift-setup/manifests/prom_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: triton-monitoring
spec:
  to:
    kind: Service
    name: prometheus
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
  wildcardPolicy: None
